--- a/css/main.css
+++ b/css/main.css
@@ -23,10 +23,16 @@ img {
     max-width: 100%;
     height: auto;
 }
-h1:hover {
-    text-shadow: chartreuse;
+h1:active {
+    color: chartreuse;
 }
-
+a{
+    a-style-type: none;
+    color: #1cb624;
+}
 a:hover {
-    text-decoration: underline;
+    color:orangered;
+}
+icone {
+    font-size: 16px;
 }
