--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,8 @@ body {
     text-align: center;
     background: #a71d1d;
     color: white;
-    font-family: "Times New Roman",Serif;
+    font-family: "Luckiest Guy",Serif;
+    font-weight: normal;
     background-image: url("../icone/favicon-32x32.png");
     background-size: 30%;
     background-position: center;
