--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,7 @@ body {
     text-align: center;
     background: #a71d1d;
     color: white;
-    font-family: "Luckiest Guy",Serif;
+    font-family: "Luckiest Guy", Serif;
     font-weight: normal;
     background-image: url("../icone/favicon-32x32.png");
     background-size: 30%;
@@ -14,26 +14,36 @@ h1 {
     color: yellow;
     border: 4px dotted red;
     text-align: center;
-    background-color: rgba(255,255,255,0.5);
+    background-color: rgba(255, 255, 255, 0.5);
     text-shadow: aqua -8px 8px 4px;
 }
+
 p1 {
     color: aqua;
 }
+
 img {
     max-width: 100%;
     height: auto;
 }
+
 h1:active {
     color: chartreuse;
 }
-a{
+
+a {
     a-style-type: none;
     color: #1cb624;
 }
+
 a:hover {
-    color:orangered;
+    color: orangered;
 }
+
 icone {
     font-size: 16px;
+}
+
+aleatoire {
+    border-radius: 10%;
 }
