--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,8 @@
 body {
+    padding-left: 10px;
+    padding-right: 10px;
+    margin-left: auto;
+    margin-right: auto;
     text-align: center;
     background: #a71d1d;
     color: white;
@@ -18,7 +22,7 @@ h1 {
     text-shadow: aqua -8px 8px 4px;
 }
 
-p1 {
+.p1 {
     color: aqua;
 }
 
@@ -40,10 +44,32 @@ a:hover {
     color: orangered;
 }
 
-icone {
+.icone {
     font-size: 16px;
 }
 
-aleatoire {
+.aleatoire {
     border-radius: 10%;
+}
+
+.menu {
+    margin: 0;
+}
+
+.box {
+    background-color: #333;
+    border-radius: 10px;
+    border: 3px solid black;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.conteneur {
+    display: grid;
+    grid-template-columns: 140px 140px;
+    gap: 10px;
+    text-align: center;
+    margin-right: auto;
+    margin-left: auto;
 }
